@@ -461,3 +461,8 @@ N(OP_LoginUnknown2),
 N(OP_ItemViewUnknown),
 N(OP_GetGuildMOTDReply),
 N(OP_SetGuildRank),
+N(OP_SpawnPositionUpdate),
+N(OP_ManaUpdate),
+N(OP_EnduranceUpdate),
+N(OP_MobManaUpdate),
+N(OP_MobEnduranceUpdate),
