@@ -322,22 +322,13 @@ OUTv(OP_SendTitleList, TitleList_Struct);
 //OUTv(OP_ItemLinkText, strlen(itemlink)+14+strlen(charname));
 //OUTv(OP_ItemLinkText, strlen(name2)+68);
 
-OUT(OP_ItemVerifyReply, ItemVerifyReply_Struct);
-OUT(OP_AnnoyingZoneUnknown, AnnoyingZoneUnknown_Struct);
-OUT(OP_SetTitleReply, SetTitleReply_Struct);
-OUT(OP_GuildMemberUpdate, GuildMemberUpdate_Struct);
-OUT(OP_MobRename, MobRename_Struct);
-OUT(OP_MobHealth, MobHealth_Struct);
-OUT(OP_TributeTimer, uint32);
-OUT(OP_ZoneInUnknown, ZoneInUnknown_Struct);
 OUT(OP_AAExpUpdate, AAExpUpdate_Struct);
-OUT(OP_GroundSpawn, Object_Struct);
 OUT(OP_Action, Action_Struct);
-OUT(OP_Weather, Weather_Struct);
 OUT(OP_AdventureData, AdventureRequestResponse_Struct);
 OUT(OP_AdventureFinish, AdventureFinish_Struct);
 OUT(OP_AdventurePointsUpdate, AdventurePoints_Update_Struct);
 OUT(OP_Animation, Animation_Struct);
+OUT(OP_AnnoyingZoneUnknown, AnnoyingZoneUnknown_Struct);
 OUT(OP_BankerChange, BankerChange_Struct);
 OUT(OP_BecomeTrader, BecomeTrader_Struct);
 OUT(OP_BeginCast, BeginCast_Struct);
@@ -345,7 +336,9 @@ OUT(OP_Charm, Charm_Struct);
 OUT(OP_ClickObjectAction, ClickObjectAction_Struct);
 OUT(OP_ConsentResponse, ConsentResponse_Struct);
 //OUT(OP_ConsumeAmmo, MoveItem_Struct);
+OUT(OP_EnduranceUpdate, EnduranceUpdate_Struct);
 OUT(OP_ExpUpdate, ExpUpdate_Struct);
+OUT(OP_GroundSpawn, Object_Struct);
 OUT(OP_GroupUpdate, GroupJoin_Struct);	//takes on 3 sizes...
 //alt:OUT(OP_GroupUpdate, GroupUpdate2_Struct);
 //alt:OUT(OP_GroupUpdate, GroupUpdate_Struct);
@@ -353,12 +346,19 @@ OUT(OP_GuildMOTD, GuildMOTD_Struct);
 OUT(OP_GuildManageAdd, GuildJoin_Struct);
 OUT(OP_GuildManageRemove, GuildManageRemove_Struct);
 OUT(OP_GuildManageStatus, GuildManageStatus_Struct);
+OUT(OP_GuildMemberUpdate, GuildMemberUpdate_Struct);
 OUT(OP_HPUpdate, SpawnHPUpdate_Struct);
 OUT(OP_IncreaseStats, IncreaseStat_Struct);
+OUT(OP_ItemVerifyReply, ItemVerifyReply_Struct);
 OUT(OP_LFGAppearance, LFG_Appearance_Struct);
 OUT(OP_LeadershipExpUpdate, LeadershipExpUpdate_Struct);
 OUT(OP_LevelAppearance, LevelAppearance_Struct);
 OUT(OP_LevelUpdate, LevelUpdate_Struct);
+OUT(OP_ManaUpdate, ManaUpdate_Struct);
+OUT(OP_MobEnduranceUpdate, MobEnduranceUpdate_Struct);
+OUT(OP_MobHealth, MobHealth_Struct);
+OUT(OP_MobManaUpdate, MobManaUpdate_Struct);
+OUT(OP_MobRename, MobRename_Struct);
 OUT(OP_MoneyOnCorpse, moneyOnCorpseStruct);	//follows OP_LootRequest
 OUT(OP_MoneyUpdate, MoneyUpdate_Struct);
 OUT(OP_MoveDoor, MoveDoor_Struct);
@@ -374,6 +374,7 @@ OUT(OP_RecipeReply, RecipeReply_Struct);
 OUT(OP_RequestClientZoneChange, RequestClientZoneChange_Struct);
 OUT(OP_RespondAA, AATable_Struct);
 OUT(OP_RezzRequest, Resurrect_Struct);
+OUT(OP_SetTitleReply, SetTitleReply_Struct);
 OUT(OP_ShopDelItem, Merchant_DelItem_Struct);
 OUT(OP_SimpleMessage, SimpleMessage_Struct);
 OUT(OP_SkillUpdate, SkillUpdate_Struct);
@@ -387,8 +388,11 @@ OUT(OP_TradeCoins, TradeCoin_Struct);
 OUT(OP_TradeMoneyUpdate, TradeMoneyUpdate_Struct);
 OUT(OP_TraderDelItem, TraderDelItem_Struct);
 OUT(OP_TraderItemUpdate, TraderItemUpdate_Struct);
+OUT(OP_TributeTimer, uint32);
 OUT(OP_UpdateLeadershipAA, UpdateLeadershipAA_Struct);
+OUT(OP_Weather, Weather_Struct);
 OUT(OP_ZoneChange, ZoneChange_Struct);
+OUT(OP_ZoneInUnknown, ZoneInUnknown_Struct);
 
 //this is the set of opcodes which are allready listed
 //in the IN section above, but are also sent OUT
@@ -408,6 +412,7 @@ OUT(OP_Bazaar, BazaarReturnDone_Struct);
 OUT(OP_Buff, SpellBuffFade_Struct);
 OUT(OP_ClickObject, ClickObject_Struct);
 OUT(OP_ClientUpdate, PlayerPositionUpdateServer_Struct);
+OUT(OP_SpawnPositionUpdate, SpawnPositionUpdate_Struct);
 OUT(OP_Consider, Consider_Struct);
 OUT(OP_Damage, CombatDamage_Struct);
 OUT(OP_Death, Death_Struct);
