@@ -257,6 +257,13 @@ OP_LDoNButton=0x0000
 OP_MoveCoin=0x0000
 OP_ReloadUI=0x0000
 
+# SoD Opcodes
+OP_SpawnPositionUpdate=0x0000		# 0x4656
+OP_ManaUpdate=0x0000				# 0x4b61
+OP_EnduranceUpdate=0x0000			# 0x02d6
+OP_MobManaUpdate=0x0000				# 0x2ac1
+OP_MobEnduranceUpdate=0x0000		# 0x6c5f
+
 #bazaar trader stuff stuff:
 #become and buy from
 #Server->Client: [ Opcode: OP_Unknown (0x0000) Size: 8 ]
