@@ -222,11 +222,10 @@ OP_Emote=0x7434						# C
 OP_SetRunMode=0x07fb				# C
 OP_BankerChange=0x21e9				# C
 OP_TargetMouse=0x7bbb				# C
-OP_MobHealth=0x6c5f					# C
-OP_InitialMobHealth=0x3676			# C
+OP_MobHealth=0x47ea					# C
+OP_InitialMobHealth=0x2d25			# C
 OP_TargetHoTT=0x3ec7				# C
 OP_DeleteSpawn=0x3164				# C
-OP_MobUpdate=0x4656					# C
 OP_AutoAttack=0x3d86				# C
 OP_AutoAttack2=0x4ca1				# C
 OP_Consume=0x7ce4					# C
@@ -316,10 +315,15 @@ OP_VetClaimReply=0x2f95				# C
 OP_CrystalCountUpdate=0x2d0e		# C
 OP_DisciplineUpdate=0x0000			# 
 OP_BecomeCorpse=0x0000				# 
+OP_MobUpdate=0x0000					# Unused?
 
-# New Opcodes that need to be added
-OP_ManaUpdate=0x3ad9				# 
-
+# New Opcodes
+OP_SpawnPositionUpdate=0x4656		# 
+OP_ManaUpdate=0x4b61				#
+OP_EnduranceUpdate=0x02d6			# 
+OP_MobManaUpdate=0x2ac1				#
+OP_MobEnduranceUpdate=0x6c5f		#
+       
 
 # Looting
 OP_LootRequest=0x2701				# C
